--- a/wwwroot/signin.html
+++ b/wwwroot/signin.html
@@ -7,24 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
     <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <title>Login</title>
+    <title>Sign In</title>
     <style>
+        html,
+        body {
+            margin: 0;
+        }
+
         body,
         input {
             font-family: 'Roboto', Tahoma, sans-serif;
             letter-spacing: 1.3px;
+            font-size: 13px;
         }
 
         .card {
             box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
             background: white;
             position: relative;
-            font-size: 13px;
             text-transform: uppercase;
             border-radius: 8px;
             padding: 3em 0;
-            width: 30em;
-            margin: 20vh auto;
+            width: 33em;
+            margin: 20vh auto 0;
         }
 
         .card:hover {
@@ -32,11 +37,16 @@
         }
 
         .card h2 {
-            padding: 0 0 1em 3em;
+            padding: 0 0 0 3em;
+            margin: 0 0 1em 0;
         }
 
         label {
             margin: 0 0 1em 0;
+        }
+
+        label:last-of-type {
+            margin: 0 0 2em 0;
         }
 
         @media (prefers-color-scheme: dark) {
@@ -59,20 +69,33 @@
         }
 
         input[type=text],
-        input[type=password],
-        input[type=submit] {
-            border: 1px solid;
+        input[type=password] {
+            border: none;
             outline: none;
-            padding: .2em .3em;
-            border: 1px solid;
+            padding: 13px 15px;
             border-radius: 3px;
+            margin: 0 0 0 1em;
+            height: 28px;
+            line-height: 24px;
+            font-size: 16px;
         }
 
         input[type=submit] {
-            border-radius: 10px;
-            padding: 0.4em 1.8em;
-            letter-spacing: 1.3px;
-            margin: 1em 0 0 0;
+            display: inline-block;
+            font-size: 16px;
+            background: black;
+            line-height: 1em;
+            padding: 0.8em 1.6em;
+            text-decoration: none;
+            border: 1px solid #23a5e0;
+            color: rgb(86, 86, 86);
+            margin: 0 0.2em;
+            border-radius: 22px;
+        }
+
+        input[type=submit]:hover {
+            color: #23a5e0;
+            text-decoration: underline;
         }
 
         ::selection {
@@ -84,7 +107,12 @@
             background: #f75b2a;
             color: white;
         }
+
+        span {
+            user-select: none;
+        }
     </style>
+    <script src="signin.js"></script>
 </head>
 
 <body>
@@ -92,19 +120,20 @@
     <div class="card">
 
         <h2>
-            <span>My Login:</span>
+            <span>Sign In:</span>
         </h2>
 
-        <form action="/login" method="post">
+        <form action="/signin" method="post" onsubmit="return signIn();">
             <label>
-                <span>Login:</span>
-                <input id="user" name="user" type="text">
+                <span>Email or Phone:</span><input id="user" name="user" type="text" autocomplete="username"
+                    autofocus="autofocus" spellcheck="false" autocapitalize="none" placeholder="email or phone">
             </label>
             <label>
-                <span>Password:</span>
-                <input id="password" name="password" type="password">
+                <span>Password:</span><input id="password" name="password" type="password"
+                    autocomplete="current-password">
             </label>
-            <input type="submit" name="submit" id="submit" value="submit" />
+
+            <input type="submit" name="submit" id="submit" value="Next" />
         </form>
     </div>
 </body>
