update website description and some styles

--- a/wwwroot/hr.html
+++ b/wwwroot/hr.html
@@ -18,7 +18,7 @@
     <link href="contact.vcf" rel="contact">
     <style>
         body {
-            color: #838383;
+            color: #565656;
             font-family: 'Roboto', Tahoma, sans-serif;
             letter-spacing: 1px;
         }
@@ -31,8 +31,8 @@
         }
 
         a {
-            color: #999999;
             text-decoration: none;
+            color: #23a5e0;
         }
 
         img {
@@ -42,8 +42,8 @@
             object-position: 0 0;
         }
 
-        a:hover {
-            color: #23a5e0;
+        img:hover {
+            box-shadow: 0 4px 12px rgba(35, 38, 40, 0.2);
         }
 
         .container {
@@ -64,6 +64,7 @@
         .updated {
             font-size: small;
             padding: .5em 0;
+            color: #535353;
         }
 
         .flex-vert {
@@ -72,8 +73,12 @@
         }
 
         .main {
-            font-weight: bold;
             font-size: large;
+            color: #23a5e0;
+        }
+
+        .main:hover {
+            text-decoration: underline;
         }
 
         #pos:hover {
@@ -86,7 +91,7 @@
             transition: .8s ease;
         }
 
-      
+
         ::selection {
             background: #f75b2a;
             color: white;
