--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,15 +21,15 @@
     <meta property='og:title' content='MYKHAILO BASIUK'>
     <meta property='og:url' content="https://mbasiuk.com">
     <meta property='og:type' content='website'>
-    <meta property='og:description' content="the world&#39;s leading IT expert.">
-    <meta property="og:image" content="https://mbasiuk./me.png">
+    <meta property="og:description" content="Welcome to the professional portfolio of Mykhailo Basiuk, a software engineer in the Dallas-Fort Worth area. Specializing in Javascript, .NET Core, Angular. Direct hire, suggest partnership, or invest to the great projects.">
+    <meta property="og:image" content="https://mbasiuk.com/me.png">
     <meta property="og:image:width" content="96">
     <meta property="og:image:height" content="96">
     <meta property="og:image:alt" content="MYKHAILO BASIUK avatar">
     <meta itemprop="name" content="MYKHAILO BASIUK">
     <meta itemprop="url" content="https://mbasiuk.com">
-    <meta itemprop="description" content="the world&#39;s leading IT expert.">
-    <meta name="description" content="the world&#39;s leading IT expert.">
+    <meta itemprop="description" content="Welcome to the professional portfolio of Mykhailo Basiuk, a software engineer in the Dallas-Fort Worth area. Specializing in Javascript, .NET Core, Angular. Direct hire, suggest partnership, or invest to the great projects.">
+    <meta name="description" content="Welcome to the professional portfolio of Mykhailo Basiuk, a software engineer in the Dallas-Fort Worth area. Specializing in Javascript, .NET Core, Angular. Direct hire, suggest partnership, or invest to the great projects.">
     <link rel="search" type="application/opensearchdescription+xml" title="Mykhailo Basiuk Search"
         href="/opensearch.xml">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -193,6 +193,7 @@
             padding: 0.8em;
             text-decoration: none;
             border: 1px solid #23a5e0;
+            background: white;
             margin: 0 0.2em;
             border-radius: 22px;
         }
