--- a/wwwroot/signin.html
+++ b/wwwroot/signin.html
@@ -14,15 +14,18 @@
             margin: 0;
         }
 
-        body,
-        input {
+        body {
             font-family: 'Roboto', Tahoma, sans-serif;
             letter-spacing: 1.3px;
             font-size: 13px;
         }
 
+        input {
+            font-family: inherit;
+            letter-spacing: inherit;
+        }
+
         .card {
-            box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
             background: white;
             position: relative;
             text-transform: uppercase;
@@ -49,17 +52,6 @@
             margin: 0 0 2em 0;
         }
 
-        @media (prefers-color-scheme: dark) {
-            body {
-                background: black;
-            }
-
-            .card {
-                background: rgb(49, 49, 49);
-                color: rgb(160, 158, 158);
-            }
-        }
-
         form {
             display: flex;
             flex-direction: column;
@@ -83,7 +75,6 @@
         input[type=submit] {
             display: inline-block;
             font-size: 16px;
-            background: black;
             line-height: 1em;
             padding: 0.8em 1.6em;
             text-decoration: none;
@@ -110,6 +101,21 @@
 
         span {
             user-select: none;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                background: black;
+            }
+
+            .card {
+                background: rgb(49, 49, 49);
+                color: rgb(160, 158, 158);
+            }
+
+            input[type=submit] {
+                background: black;
+            }
         }
     </style>
     <script src="signin.js"></script>
