--- a/wwwroot/signin.html
+++ b/wwwroot/signin.html
@@ -27,6 +27,7 @@
 
         .card {
             background: white;
+            box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
             position: relative;
             text-transform: uppercase;
             border-radius: 8px;
