--- a/wwwroot/bas-a-create.html
+++ b/wwwroot/bas-a-create.html
@@ -530,7 +530,7 @@
 
         <div class="answer">
             <span class="mark">A</span>
-            I recommend using the second BAS-A for confirming the demand action.
+            I recommend using the second BAS-A instance for confirming the demand action.
         </div>
 
         <div class="question">
