--- a/wwwroot/bas-a-create.html
+++ b/wwwroot/bas-a-create.html
@@ -635,7 +635,7 @@
         xhr.send(JSON.stringify({
             duration: document.querySelectorAll("[name=duration]:checked")[0].value,
             durationCustom: document.getElementById("durationCustom").value,
-            lineseKey: document.getElementById("licenseKey").value,
+            licenseKey: document.getElementById("licenseKey").value,
             message: document.getElementById("message").value
         }));
         return false;
