Improving apple device fonts.

--- a/wwwroot/tool.html
+++ b/wwwroot/tool.html
@@ -95,7 +95,7 @@
             transition: 300ms;
         }
     </style>
-    <script src="tool.js"></script>
+    <script src="/tool.js"></script>
 </head>
 
 <body>
