--- a/wwwroot/bas-a.html
+++ b/wwwroot/bas-a.html
@@ -8,7 +8,7 @@
 
     <style>
         html {
-            font-family: 'Times New Roman', Times, serif;
+            font-family: -apple-system, 'Times New Roman', Times, serif;
             font-size: 18px;
             letter-spacing: 1.4px;
         }
