--- a/wwwroot/bas-a.html
+++ b/wwwroot/bas-a.html
@@ -8,8 +8,8 @@
 
     <style>
         html {
-            font-family: -apple-system, 'Times New Roman', Times, serif;
-            font-size: 18px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Times New Roman', Times, serif;
+            font-size: 1rem;
             letter-spacing: 1.4px;
         }
 
