--- a/wwwroot/bas-a.html
+++ b/wwwroot/bas-a.html
@@ -86,10 +86,6 @@
         }
 
         .col-2 {
-            width: 120px;
-        }
-
-        #t2 .col-2 {
             width: 350px;
         }
 
@@ -236,7 +232,7 @@
                             1
                         </td>
                         <td class="col-2">
-                            Enter <span class="rn">1 Read No</span> from <span class="rf">eForm BAS-A</span>
+                            Read No
                         </td>
                         <td class="col-3">
                             <input name="rid" id="rid" type="text">
@@ -336,7 +332,7 @@
                         1
                     </td>
                     <td class="col-2">
-                        Enter <span class="rn">2 Edit No</span> from <span class="rf">eForm BAS-A</span>
+                        Edit No
                     </td>
                     <td class="col-3">
                         <input name="did" id="did" type="text">
