update the product icon with monocle.

--- a/wwwroot/bas-a.html
+++ b/wwwroot/bas-a.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BAS-A - Independent private party demand confirmation tool.</title>
+    <link rel="icon" sizes="32x32" href="/bas-a.ico" type="image/icon">
 
     <style>
         html {
@@ -152,6 +153,10 @@
             height: 8em;
         }
 
+        img {
+            vertical-align: middle;
+        }
+
         @media (prefers-color-scheme: dark) {
 
             html,
@@ -202,7 +207,7 @@
     <div class="wrapper">
         <div class="container">
             <h2>
-                BAS-A - Independent private party demand confirmation tool.
+            <img src="/bas-a.svg" width="32" height="32" alt="">    BAS-A - Independent private party demand confirmation tool.
             </h2>
 
             <div class="description">
@@ -222,6 +227,7 @@
                 <table id="t2">
                     <tr class="section">
                         <th colspan="3">
+                            <img src="/bas-a.svg" width="32" height="32" />
                             <span class="form-name">eForm BAS-AV</span>
                             <span class="form-porpuse">Check On Demand Status</span>
                         </th>
@@ -322,6 +328,7 @@
             <table>
                 <tr class="section">
                     <th colspan="3">
+                        <img src="/bas-a.svg" width="32" height="32" />
                         <span class="form-name">eForm BAS-AD</span>
                         <span class="form-porpuse">Demand</span>
                     </th>
@@ -353,6 +360,7 @@
                 <table>
                     <tr class="section">
                         <th colspan="3">
+                            <img src="/bas-a.svg" width="32" height="32" />
                             <span class="form-name">eForm BAS-AN</span>
                             <span class="form-porpuse">New</span>
                         </th>
@@ -442,6 +450,7 @@
             <table id="t1">
                 <tr class="section">
                     <th colspan="3">
+                        <img src="/bas-a.svg" width="32" height="32" />
                         <span class="form-name">eForm BAS-A</span>
                         <span class="form-porpuse">Details</span>
                     </th>
@@ -515,7 +524,10 @@
         <div class="container">
             <table>
                 <tr class="section">
-                    <th colspan="3">Form BAS-A Description</th>
+                    <th colspan="3">
+                        <img src="/bas-a.svg" width="32" height="32" />
+                        Form BAS-A Description
+                    </th>
                 </tr>
                 <tr>
                     <td class="col-1">1</td>
